WIP - vaguely working code
* `index.js` converts a hardcoded WIF to a hardcoded PNG
* `img2wif.js` converts a hardcoded image to a hardcoded WIF

To come:

* use `floyd-steinberg` to dither incoming pictures
* implement command line arguments
* be less crappy

--- a/package.json
+++ b/package.json
@@ -10,8 +10,13 @@
   "keywords": [
     "wif",
     "epaper",
-    "rebadger"
+    "badger"
   ],
   "author": "Steve Anderson",
-  "license": "MIT"
+  "license": "MIT",
+  "dependencies": {
+    "floyd-steinberg": "^1.0.4",
+    "jimp": "^0.2.9",
+    "q": "^1.4.1"
+  }
 }
